[tool.poetry]
name = "wowapi_py"
version = "1.0.0"
description = ""
authors = ["lostcol0ny <tobydillman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
requests-oauthlib = "^2.0.0"
aiohttp = "^3.10.1"
oauthlib = "^3.2.2"
sphinx = "^8.0.2"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
